<resources>
    <!-- Activity titles -->
    <string name="app_name">SwanseaHistoryApp</string>
    <string name="title_home_activity">Home</string>
    <string name="default_title_poi_details">Unknown Location</string>
    <string name="title_login_activity">Log In</string>
    <string name="title_add_poi">New PoI</string>
    <string name="title_edit_poi">Edit PoI</string>
    <string name="title_pick_location">Pick location</string>
    <string name="title_activity_location_picker">LocationPickerActivity</string>

    <!-- Button labels -->
    <string name="menu_title_log_in">Log in</string>
    <string name="menu_title_log_out">Log out</string>
    <string name="menu_title_email_visited">Email Visited PoIs</string>
    <string name="menu_title_add_poi">Add PoI</string>
    <string name="menu_title_mark_visited">Mark as Visited</string>
    <string name="menu_title_edit_poi">Edit</string>
    <string name="menu_title_save_poi">Save</string>
    <string name="menu_title_discard_poi">Cancel</string>
    <string name="menu_title_delete_poi">Delete</string>
    <string name="button_text_speak_description">Speak description</string>
    <string name="button_add_poi_map">Choose location on map</string>
    <string name="button_change_image">Select image</string>
    <string name="button_remove_image">Remove image</string>

    <!-- Text field labels and placeholder text -->
    <string name="label_text_email">Email</string>
    <string name="label_text_password">Password</string>
    <string name="label_poi_title">PoI Name</string>
    <string name="label_poi_address">Address</string>
    <string name="label_poi_location">Location</string>
    <string name="label_poi_description">Description</string>
    <string name="label_poi_image">Image</string>

    <!-- Authentication messages -->
    <string name="button_text_login">Log In</string>
    <string name="message_already_logged_in">You are already logged in as %s</string>
    <string name="message_successful_login">Welcome %s!</string>
    <string name="message_failed_login">Your login details are incorrect</string>
    <string name="message_missing_email">Please enter your email address</string>
    <string name="message_missing_password">Please enter your password</string>
    <string name="message_missing_email_password">Please enter your email and password</string>
    <string name="message_logout">You have logged out</string>
    <string name="error_admin_verification_failed">Could not verify your account as admin</string>

    <!-- Visited PoI email text -->
    <string name="email_visited_subject">Your visited points of interest in Swansea</string>
    <string name="email_chooser_title">Send email via...</string>
    <string name="error_email_send">Unable to send email</string>
    <string name="email_body_line_1">You have visited the following points of interest:</string>
    <string name="email_body_list_item">- %s</string>

    <!-- PoI details text -->
    <string name="default_poi_description">No description.</string>
    <string name="default_poi_image_description">An image of the point of interest.</string>
    <string name="default_poi_address">Address not available</string>
    <string name="default_rating_text">No ratings</string>
    <string name="message_overall_rating">%.1f stars</string>

    <!-- Miscellaneous messages -->
    <string name="error_map_pois_not_loaded">Map failed to load</string>
    <string name="message_map_info_window_click">Click for details</string>
    <string name="message_poi_visited">You have visited this point of interest</string>
    <string name="error_poi_image_not_loaded">Image could not be displayed</string>
    <string name="error_text_to_speech_error">The text to speech service is not working</string>
    <string name="error_visited_state_not_determined">Could not determine if you have visited here previously</string>
    <string name="error_visited_state_not_updated">Could not update your visited status</string>
    <string name="message_no_visited_pois">You have not visited any points of interest</string>
    <string name="message_user_rating">Your rating</string>
    <string name="message_rating_updated">Your rating has been updated</string>
    <string name="error_rating_not_updated">Your rating could not be updated</string>
</resources>
